test/error/syn/functionParameterExp.tig
let
    var n := 0
    var f := 1
    function fun(a*b,c) := 
    (
	    a:=b*c
    )
in  
    fun(n,f);
end
